Issue 43474: Prevent text wrapping for date columns

--- a/packages/components/src/theme/detail.scss
+++ b/packages/components/src/theme/detail.scss
@@ -56,8 +56,12 @@
   padding-left: 5px;
 }
 
-.detail-display {
-    white-space: pre-wrap;
+.ws-pre-wrap {
+  white-space: pre-wrap;
+}
+
+.ws-no-wrap {
+  white-space: nowrap;
 }
 
 .component-detail--child {
